--- a/program/src/config.json
+++ b/program/src/config.json
@@ -2,12 +2,12 @@
     "application": {
         "module": "PES001"
     },
+    "db_path": "/data/dat/PesiGTW/db/",
     "log": {
         "max-size-mb": 10
     },
     "port": {
         "md_webservice": 8000,
         "md_webservice_html": 8001
-    },
-    "db_path": "/data/dat/PesiGTW/db/"
+    }
 }
